feat(template): 存为模板产出 .canvas pack（导出/发布重写 + manifest id 一致性 + 值 JSON 转义）